signoz-restricted.yaml
apiVersion: v1
kind: Service
metadata:
  name: signoz-restricted
  namespace: monitoring
  annotations:
    oci.oraclecloud.com/load-balancer-type: "lb"              # same as old
    service.beta.kubernetes.io/oci-load-balancer-internal: "false"  # set true if you need internal only
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: signoz
    app.kubernetes.io/instance: signoz
    app.kubernetes.io/name: signoz
  loadBalancerSourceRanges:
    - 193.122.80.125/32
    - 18.135.246.126/32
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: http-internal
      port: 8085
      targetPort: 8085
    - name: opamp-internal
      port: 4320
      targetPort: 4320
