signoz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signoz-internal
  namespace: monitoring
  annotations:
    oci.oraclecloud.com/load-balancer-type: "lb"
    service.beta.kubernetes.io/oci-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: signoz
    app.kubernetes.io/instance: signoz
    app.kubernetes.io/name: signoz
  ports:
    - name: http
      port: 80
      targetPort: 8080
